--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,54 +1,57 @@
-<p id="notice"><%= notice %></p>
-<h1>BY: <%= @recipe.name %></h1>
-<p>
-  <strong>Title:</strong>
-  <%= @recipe.title %>
-</p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <h1>BY: <%= @recipe.name %></h1>
+  <p>
+    <strong>Title:</strong>
+    <%= @recipe.title %>
+  </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @recipe.name %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @recipe.name %>
+  </p>
 
-<p class="date">
-  Submitted <%= time_ago_in_words(@recipe.created_at) %>Ago
-</p>
-
-
-<p>
-  <strong>Image:</strong>
-    <%= image_tag @recipe.image.url%>
-</p>
-
-<p>
-  <strong>Ingredients:</strong>
-  <%= @recipe.ingredients %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @recipe.description %>
-</p>
-
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
-
-<h2>Comments</h2>
-<% @recipe.re_comments.each do |re_comment| %>
-<p>
-  <strong>Name:</strong>
-  <%= re_comment.name %>
-</p>
-<p>
-  <strong>comment:</strong>
-  <%= re_comment.body %>
-</p>
-<hr>
-<% end %>
+  <p class="date">
+    Submitted <%= time_ago_in_words(@recipe.created_at) %>Ago
+  </p>
 
 
+  <p>
+    <strong>Image:</strong>
+      <%= image_tag @recipe.image.url%>
+  </p>
 
-<div id="re_comments">
-      <h3>Add a Comment:</h3>
-      <%= render "re_comments/form" %>
+  <p>
+    <strong>Ingredients:</strong>
+    <%= @recipe.ingredients %>
+  </p>
+
+  <p>
+    <strong>Description:</strong>
+    <%= @recipe.description %>
+  </p>
+
+  <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
+  <%= link_to 'Back', recipes_path %>
+
+  <h2>Comments</h2>
+  <% @recipe.re_comments.each do |re_comment| %>
+  <p>
+    <strong>Name:</strong>
+    <%= re_comment.name %>
+  </p>
+  <p>
+    <strong>comment:</strong>
+    <%= re_comment.body %>
+  </p>
+  <hr>
+  <% end %>
+
+
+
+  <div id="re_comments">
+        <h3>Add a Comment:</h3>
+        <%= render "re_comments/form" %>
+  </div>
+
 </div>
