--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= render 'form', blog: @blog %>
 
-  <%= link_to 'Show', @blog %> |
-  <%= link_to 'Back', blogs_path %>
+  <button type="button" name="button"><%= link_to 'Show', @blog %></button> |
+  <button type="button" name="button"><%= link_to 'Back', blogs_path %></button>
 </div>
