--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Share your Blogs</h1>
 
-  <table>
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th>#</th>
@@ -33,6 +33,6 @@
 
 
 
-  <%= link_to 'New Blog', new_blog_path %>
+  <button type="button" name="button"><%= link_to 'New Blog', new_blog_path %></button>
 
 </div>
