--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Recipes</h1>
 
-  <table>
+  <table class="table table-bordered">
     <thead>
       <tr>
 
@@ -35,6 +35,6 @@
 
 
 
-  <%= link_to 'New Recipe', new_recipe_path %>
+<button type="button" name="button"><%= link_to 'New Recipe', new_recipe_path %></button>
 
 </div>
