--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -3,7 +3,7 @@
 
   <%= render 'form', recipe: @recipe %>
 
-  <%= link_to 'Show', @recipe %> |
-  <%= link_to 'Back', recipes_path %>
+  <button type="button" name="button"><%= link_to 'Show', @recipe %></button> |
+  <button type="button" name="button"><%= link_to 'Back', recipes_path %></button>
 
 </div>
