--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -3,6 +3,6 @@
 
   <%= render 'form', recipe: @recipe %>
 
-  <%= link_to 'Back', recipes_path %>
+  <button type="button" name="button"><%= link_to 'Back', recipes_path %></button>
 
 </div>
